Fix width on small screens

--- a/styles/app.css
+++ b/styles/app.css
@@ -870,7 +870,7 @@ body[data-section-actuelle~="top-layer"] #top-layer {
   z-index: var(--z-top-layer);
 }
 
-@media (max-width: 719px) {
+/*@media (max-width: 719px) {
   #top-layer > .mobile-centered {
     max-width: calc(100vw - 16px) !important;
     max-height: calc(100vh - 16px) !important;
@@ -880,7 +880,7 @@ body[data-section-actuelle~="top-layer"] #top-layer {
     left: 50vw !important;
     transform: translate(-50%, -50%);
   }
-}
+}*/
 
 
 
